right one maybe?

--- a/style.css
+++ b/style.css
@@ -1,35 +1,44 @@
 body{
+   height: 100%;
    margin: 0;
-   font-family: 'Roboto', sans-serif;
 }
+/*Banner section starts*/
 .banner{
-   width: 100%;
-   height: 650px;
-   position: absolute;
-   background-image: linear-gradient(rgba( 0,0,0,0.75),rgba( 0,0,0,0.75)),url(images/donation6.jpg) ;
-   background-size: cover;
+   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/donation0.jpg);
+   height:650px;
    background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 }
-.content{
+.banner-text {
    text-align: center;
-   color: white;   
-   padding: 100px 0 40px;
-}
-.content h1{
-   font-size: 70px;
-}
-.content p{
-   font-weight: 100;
-   line-height: 25px;
-
-}
-.donate-button{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
    color: white;
+ }
+ .banner-text h1{
+    font-size: 90px;
+ }
+ .banner-text p{
+   font-size: 20px;
+ }
+ .donate-button{
+   margin: 3%;
+   display: inline-block;
    text-decoration: none;
-   background-image: linear-gradient(to right, orange, tomato);
    padding: 15px 35px;
-   margin: 5%;
+   color: white;
+   background-color: rgb(201, 83, 83);
    border-radius: 5px;
-   font-weight: 700;
-
-}
+   text-align: center;
+   font-size: 20px;
+ }
+ /*Footer section starts*/
+ footer {
+   text-align: center;
+   padding: 5px;
+   background-color: rgb(11, 11, 34);
+   color: white;
+ }
