--- a/style.css
+++ b/style.css
@@ -36,11 +36,56 @@ body{
    font-size: 20px;
  }
 
- /*Donation Plan Section*/
- .donation-plan{
-   padding: 80px 0;
-   background: white;
- }
+/* Donation-Plan section */
+.donation-plan{
+   margin: 10%;
+}
+.donation-text{
+   text-align: center;
+   margin-bottom: 10%;
+}
+.donation-text h1{
+   font-size: 45px;
+}
+.donation-text p{
+   font-size: 20px;
+   color: rgb(119, 116, 116);
+   line-height: 1.5;
+}
+.donation-box{
+   display: inline-block;
+   width: 320px;
+   height: 350px;
+   padding: 10px;
+   margin: 0;
+   background-color: aqua;
+   border-radius: 5px;
+}
+.donation-box img{
+   padding: 40px 0 20px 10px;
+
+}
+.donation-box h3{
+   font-size: 25px;
+   padding-left: 10px;
+}
+.donation-box p{
+   font-size: 20px;
+   color: rgb(119, 116, 116);
+   line-height: 1.5;
+   padding-left: 10px;
+}
+#food-box{
+   background-color: rgb(240, 248, 255);
+   margin-right: 15px;
+}
+#second-box{
+   background-color: rgb(255, 240, 245);
+   margin-right: 15px;
+}
+#third-box{
+   background-color: rgb(250, 250, 210);
+}
 
  /*Footer section starts*/
  footer {
@@ -49,41 +94,3 @@ body{
    background-color: rgb(11, 11, 34);
    color: white;
  }
- .donation-text{
-   text-align: center;
-    color: black;
-    margin-bottom: 7%;
- }
- .donation-text h1{
-   font-size: 40px;
-    margin-bottom: 4%;
- }
- .donation-text p{
-   font-size: 20px;
-   line-height: 1.5;
- }
-
- .donation-types{
-    width: 33.33%;
-    background: gray;
-    margin: 0px 2%;
-
- }
- .box{
-   padding: 30px 0.15px;
-   border-bottom: 3px solid #e0e0e0;
-}
-
-.box img{
-   margin: 10px 0 20px 30px;
-}
-.box h4{
-   margin-left:30px ;
-   font-size: 25px;
-}
-.box p{
-   padding: 15px 20px 30px;
-   line-height: 1.5;
-   font-size: 20px;
-   color: #222;
-}
