--- a/style.css
+++ b/style.css
@@ -36,6 +36,73 @@ body{
    font-size: 20px;
  }
 
+ /* Donate-today section */
+.Donate-today{
+   margin: 10%;
+}
+.donate-text{
+   text-align: center;
+   margin-bottom: 5%;
+}
+.donate-text h1{
+   font-size: 45px;
+}
+.donate-text p{
+   font-size: 20px;
+   color: rgb(119, 116, 116);
+   line-height: 1.5;
+}
+.money-types{
+   margin: 0 15%;
+}
+
+.money-box{
+   background-color: rgb(248, 248, 255);
+   width: 130px;
+   height: 130px;
+   border-radius: 5px;
+   display: inline-block;
+   margin-right: 15px;
+}
+.money-box h3{
+   text-align: center;
+   padding: 5px;
+   font-size: 30px;
+   color: grey;
+   
+}
+#second-box{
+   border: 2px solid tomato; 
+   background-color: rgb(255, 228, 225);
+}
+#second-box h3{
+   color: tomato;
+}
+.other-amount{
+   margin-top: 5%;
+}
+#text{
+   margin: auto 15%;
+   width: 68%;
+   height: 50px ;
+   text-align: center;
+   font-size: 20px;
+   border-color: transparent;
+   border-bottom: 1px solid #DCDCDC;
+}
+#submit{
+   margin: auto 40%;
+   width:14%;
+   height: 50px;
+   margin-top: 30px;
+   border-radius: 5px;
+   color: white;
+   font-size: 20px;
+   background-color: tomato;
+   border-color: transparent;
+   
+}
+
 /* Donation-Plan section */
 .donation-plan{
    margin: 10%;
@@ -79,11 +146,11 @@ body{
    background-color: rgb(240, 248, 255);
    margin-right: 15px;
 }
-#second-box{
+#shelter-box{
    background-color: rgb(255, 240, 245);
    margin-right: 15px;
 }
-#third-box{
+#education-box{
    background-color: rgb(250, 250, 210);
 }
 
