--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
    height: 100%;
    margin: 0;
+   font-family: 'Roboto', sans-serif;
 }
 /*Banner section starts*/
 .banner{
@@ -208,4 +209,8 @@ body{
    padding: 5px;
    background-color: rgb(11, 11, 34);
    color: white;
+ }
+ footer h1{
+   color: tomato;
+   font-family: 'Lobster', cursive;
  }
